added image if profile photo does not exist

--- a/frontend/templates/home/django-material-dashboard/profile.html
+++ b/frontend/templates/home/django-material-dashboard/profile.html
@@ -20,7 +20,7 @@
               {% if object.profile_image %}
               <img src="{{ object.profile_image_url }}" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
               {% else %}
-              <img src="https://github.com/google/material-design-icons/blob/master/png/social/sentiment_satisfied/materialiconsoutlined/48dp/2x/outline_sentiment_satisfied_black_48dp.png" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+              <img src="https://raw.githubusercontent.com/google/material-design-icons/master/png/social/sentiment_satisfied/materialiconsoutlined/48dp/2x/outline_sentiment_satisfied_black_48dp.png" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
               {% endif %}
             </div>
           </div>
