updated navbar to include login option if not authenticated

--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -40,12 +40,6 @@
                 <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
                   <span>Contact Us</span>
                 </a>
-                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
-                  Account
-                </h6>
-                <a href="/main/sign-in.html" class="dropdown-item border-radius-md">
-                  <span>Sign In</span>
-                </a>
               </div>
               <div class="d-lg-none">
                 <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1">
@@ -65,12 +59,6 @@
                 </a>
                 <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
                   <span>Contact Us</span>
-                </a>
-                <h6 class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-1 mt-3">
-                  Account
-                </h6>
-                <a href="/main/sign-in.html" class="dropdown-item border-radius-md">
-                  <span>Sign In</span>
                 </a>
               </div>
             </div>
@@ -228,6 +216,14 @@
               href="{% url 'logout' %}">
               <i class="fa fa-sign-out me-1"></i>
               <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign Out">Logout</p>
+            </a>
+          </li>
+          {% else %}
+          <li class="nav-item ms-lg-auto">
+            <a class="nav-link nav-link-icon me-2"
+               href="{% url 'login' %}">
+              <i class="fa fa-sign-in me-1"></i>
+              <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Sign in">Login</p>
             </a>
           </li>
           {% endif %}    
