added forms to createview for contactus

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="row">
                       <div class="col-md-6 text-end ms-auto">
-                        <button type="submit" class="btn bg-gradient-dark w-100">Send Message</button>
+                        <button type="submit" value="Save" class="btn bg-gradient-dark w-100">Send Message</button>
                       </div>
                     </div>
                   </div>
