--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -50,7 +50,11 @@
                 </div>
               </div>
               <div class="col-lg-7">
-                <form class="p-3" id="contact-form" method="post"> {% csrf_token %}
+                {% if form.errors %}
+                <p>Your username and password didn't match. Please try again.</p>
+                {% endif %}
+                <form class="p-3" id="contact-form" method="post">
+                  {% csrf_token %}
                   <div class="card-header px-4 py-sm-5 py-3">
                     <h2>Contact Us</h2>
                     <p class="lead"> For further questions, please fill out and submit this form.</p>
@@ -60,25 +64,25 @@
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>Full Name</label>
-                          <input type="text" name="full_name" class="form-control" placeholder="Full Name">
+                          <input type="text" name="full_name" class="form-control" placeholder="Full Name" required>
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>Email</label>
-                          <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com">
+                          <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com" required>
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>How can we help you?</label>
-                          <textarea name="message" name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters"></textarea>
+                          <textarea name="message" name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea>
                         </div>
                       </div>
                     </div>
                     <div class="row">
                       <div class="col-md-6 text-end ms-auto">
-                        <button type="submit" value="Save" class="btn bg-gradient-dark w-100">Send Message</button>
+                        <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Send Message</button>
                       </div>
                     </div>
                   </div>
