--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -50,8 +50,12 @@
                 </div>
               </div>
               <div class="col-lg-7">
-                {% if form.errors %}
-                <p>Your username and password didn't match. Please try again.</p>
+                {% if form.subject.errors %}
+                    <ol>
+                    {% for error in form.subject.errors %}
+                        <li><strong>{{ error|escape }}</strong></li>
+                    {% endfor %}
+                    </ol>
                 {% endif %}
                 <form class="p-3" id="contact-form" method="post">
                   {% csrf_token %}
