--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -68,19 +68,22 @@
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>Full Name</label>
-                          <input type="text" name="full_name" class="form-control" placeholder="Full Name" required>
+                          {{ form.full_name }}
+                          <!-- <input type="text" name="full_name" class="form-control" placeholder="Full Name" required> -->
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>Email</label>
-                          <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com" required>
+                          {{ form.contact_email }}
+                          <!-- <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com" required> -->
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
                         <div class="input-group input-group-static mb-4">
                           <label>How can we help you?</label>
-                          <textarea name="message" name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea>
+                          {{ form.contact_context }}
+                          <!-- <textarea name="message" name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea> -->
                         </div>
                       </div>
                     </div>
