--- a/frontend/templates/home/django-material-dashboard/sample-label-add.html
+++ b/frontend/templates/home/django-material-dashboard/sample-label-add.html
@@ -14,11 +14,20 @@
         <span class="mask bg-gradient-dark opacity-6"></span>
     </div>
     <div class="card card-body mx-3 mx-md-4 mt-n6">
+      {% if perms.sample_label.add_samplelabelrequest %}
       <div class="row min-vh-80 h-100">
         <div class="col-12">
           <h3 class="text-center">Sample Label Add</h3>
         </div>
       </div>
+          {% else %}
+      <div class="row min-vh-80 h-100">
+        <div class="col-12">
+          <h3 class="text-center">You do not have permission to view this page.</h3>
+        </div>
+      </div>
+    </div>
+    {% endif %}
     </div>
     {% include 'includes/django-material-dashboard/footer.html' %}
 
