updated contact us form in frontend

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -83,7 +83,7 @@
                         <div class="input-group input-group-static mb-4">
                           <label>How can we help you?</label>
                           {{ form.contact_context }}
-                          <!-- <textarea name="message" name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea> -->
+                          <!-- <textarea name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea> -->
                         </div>
                       </div>
                     </div>
