updated contact us form in frontend

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -70,6 +70,7 @@
                           <label>Full Name</label>
                           {{ form.full_name }}
                           <!-- <input type="text" name="full_name" class="form-control" placeholder="Full Name" required> -->
+                          <!-- <input type="text" class="form-control" placeholder="Full Name"> -->
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
@@ -77,6 +78,7 @@
                           <label>Email</label>
                           {{ form.contact_email }}
                           <!-- <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com" required> -->
+                          <!-- <input type="text" class="form-control" placeholder="What you love"> -->
                         </div>
                       </div>
                       <div class="col-md-12 pe-2 mb-3">
@@ -84,6 +86,7 @@
                           <label>How can we help you?</label>
                           {{ form.contact_context }}
                           <!-- <textarea name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea> -->
+                          <!-- <textarea name="message" class="form-control" id="message" rows="6" placeholder="I want to say that..."></textarea> -->
                         </div>
                       </div>
                     </div>
