updated contact us form

--- a/frontend/templates/home/django-material-kit/contact-us.html
+++ b/frontend/templates/home/django-material-kit/contact-us.html
@@ -51,17 +51,55 @@
               </div>
               <div class="col-lg-7">
                 {% if form.subject.errors %}
-                    <ol>
-                    {% for error in form.subject.errors %}
-                        <li><strong>{{ error|escape }}</strong></li>
-                    {% endfor %}
-                    </ol>
+                <div class="row">
+                  {% for error in form.subject.errors %}
+                  <div class="alert alert-primary text-white font-weight-bold" role="alert">{{ error|escape }}</div>
+                  {% endfor %}
+                  </div>
                 {% endif %}
-              <form method="post">
+                {% if form.non_field_errors %}
+                <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
+                {% endif %}
+                <form class="p-3" id="contact-form" method="post" action="">
                   {% csrf_token %}
-                  {{ form }}
-                  <input type="submit" value="Submit">
-              </form>
+                  <div class="card-header px-4 py-sm-5 py-3">
+                    <h2>Contact Us</h2>
+                    <p class="lead"> For further questions, please fill out and submit this form.</p>
+                  </div>
+                  <div class="card-body pt-1">
+                    <div class="row">
+                      <div class="col-md-12 pe-2 mb-3">
+                        <div class="input-group input-group-static mb-4">
+                          <label>Full Name</label>
+                          {{ form.full_name }}
+                          <!-- <input type="text" name="full_name" class="form-control" placeholder="Full Name" required> -->
+                          <!-- <input type="text" class="form-control" placeholder="Full Name"> -->
+                        </div>
+                      </div>
+                      <div class="col-md-12 pe-2 mb-3">
+                        <div class="input-group input-group-static mb-4">
+                          <label>Email</label>
+                          {{ form.contact_email }}
+                          <!-- <input type="email" name="contact_email" class="form-control" placeholder="example@mail.com" required> -->
+                          <!-- <input type="text" class="form-control" placeholder="What you love"> -->
+                        </div>
+                      </div>
+                      <div class="col-md-12 pe-2 mb-3">
+                        <div class="input-group input-group-static mb-4">
+                          <label>How can we help you?</label>
+                          {{ form.contact_context }}
+                          <!-- <textarea name="contact_context" class="form-control" id="message" rows="6" placeholder="Describe your problem in at least 250 characters" required></textarea> -->
+                          <!-- <textarea name="message" class="form-control" id="message" rows="6" placeholder="I want to say that..."></textarea> -->
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-md-6 text-end ms-auto">
+                        <button type="submit" class="btn bg-gradient-dark w-100">Send Message</button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
