--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -65,7 +65,7 @@
             </div>
            </div>
            <div class="col-md-12 pe-2 mb-3">
-             <div class="input-group input-group-static mb-4">
+             <div class="form-group form-file-upload form-file-multiple">
                <label>Profile Image</label>
                {{ form.profile_image }}
              </div>
@@ -77,7 +77,7 @@
              </div>
             </div>
           <div class="col-md-6 text-end ms-auto">
-            <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Send Message</button>
+            <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Update Profile</button>
           </div>
           </div>
         </form>
