updated profile update page in dashboard frontend

--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -65,7 +65,7 @@
             </div>
            </div>
            <div class="col-md-12 pe-2 mb-3">
-             <div class="form-group form-file-upload form-file-multiple">
+             <div class="input-group input-group-static mb-4">
                <label>Profile Image</label>
                {{ form.profile_image }}
              </div>
