--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -21,13 +21,6 @@
           <h3 class="text-center">Update Profile</h3>
         </div>
         <!-- START FORM ERRORS -->
-        {% if form.subject.errors %}
-        <div class="row">
-          {% for error in form.subject.errors %}
-          <div class="alert alert-primary text-white font-weight-bold" role="alert">{{ error|escape }}</div>
-          {% endfor %}
-        </div>
-        {% endif %}
         {% if form.non_field_errors %}
         <div class="alert alert-secondary text-white font-weight-bold" role="alert">{{ form.non_field_errors }}</div>
         {% endif %}
@@ -36,46 +29,20 @@
         <form method="post" class="p-3" id="contact-form" >
           {% csrf_token %}
           <div class="card-body pt-1">
-
            <div class="row">
 
-            <div class="col-md-12 pe-2 mb-3">
+             {% for field in form %}
+             <div class="col-md-12 pe-2 mb-3">
+                {{ field.errors }}
+                {{ field.label_tag }}
              <div class="input-group input-group-static mb-4">
-              <label>First Name</label>
-               {{ form.first_name }}
+                {{ field }}
+                {% if field.help_text %}
+                <p class="help">{{ field.help_text|safe }}</p>
+                {% endif %}
              </div>
             </div>
-            <div class="col-md-12 pe-2 mb-3">
-              <div class="input-group input-group-static mb-4">
-                <label>Last Name</label>
-                {{ form.last_name }}
-              </div>
-            </div>
-            <div class="col-md-12 pe-2 mb-3">
-             <div class="input-group input-group-static mb-4">
-               <label>Phone Number</label>
-               {{ form.phone_number }}
-             </div>
-            </div>
-            <div class="col-md-12 pe-2 mb-3">
-             <div class="input-group input-group-static mb-4">
-               <label>ArcGIS Online Username</label>
-               {{ form.agol_username }}
-             </div>
-            </div>
-           </div>
-           <div class="col-md-12 pe-2 mb-3">
-             <div class="input-group input-group-static mb-4">
-               <label>Profile Image</label>
-               {{ form.profile_image }}
-             </div>
-            </div>
-           <div class="col-md-12 pe-2 mb-3">
-             <div class="input-group input-group-static mb-4">
-               <label>Affiliated Project(s)</label>
-               {{ form.affiliated_projects }}
-             </div>
-            </div>
+             {% endfor %}
           <div class="col-md-6 text-end ms-auto">
             <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Update Profile</button>
           </div>
