--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -38,7 +38,7 @@
         {% if perms.field_site.add_fieldsite %}
         <li class="nav-item">
           <a class="nav-link text-white {% if 'field-site-add' in segment %} active bg-gradient-primary {% endif %}"
-             href="/dashboard/field-site-add.html">
+             href="/dashboard/field-site/add">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">add_box</i>
             </div>
@@ -54,7 +54,7 @@
         {% if perms.sample_label.view_samplelabelrequest %}
          <li class="nav-item">
           <a class="nav-link text-white {% if 'sample-labels' in segment %} active bg-gradient-primary {% endif %}"
-             href="/dashboard/sample-labels.html">
+             href="/dashboard/sample-labels/">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
