--- a/frontend/templates/home/django-material-dashboard/field-detail.html
+++ b/frontend/templates/home/django-material-dashboard/field-detail.html
@@ -16,7 +16,7 @@
     <div class="card card-body mx-3 mx-md-4 mt-n6">
       <div class="row min-vh-80 h-100">
         <div class="col-12">
-          <h3 class="text-center">{{ title|title }} Detail</h3>
+          <h3 class="text-center">{{ page_title|title }} Detail</h3>
         </div>
       </div>
       <!-- insert detail view here -->
