Added image for about us in frontend templates

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -287,7 +287,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="https://raw.githubusercontent.com/google/material-design-icons/master/png/social/sentiment_satisfied/materialiconsoutlined/48dp/2x/outline_sentiment_satisfied_black_48dp.png" alt="image">
                     </div>
                   </a>
                 </div>
