--- a/frontend/templates/home/django-material-dashboard/field-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-list.html
@@ -17,7 +17,7 @@
     <div class="card card-body mx-3 mx-md-4 mt-n6">
       <div class="row min-vh-80 h-100">
         <div class="col-12">
-          <h3 class="text-center">{{ page_title|title }}</h3>
+          <h6 class="text-white text-capitalize ps-3">{{ page_title|title Table }}</h6>
         </div>
         <!-- insert table here -->
         {% render_table table %}
