--- a/frontend/templates/home/django-material-dashboard/field-list.html
+++ b/frontend/templates/home/django-material-dashboard/field-list.html
@@ -10,26 +10,19 @@
 {% block content %}
 
   <div class="container-fluid py-4">
-    <div class="page-header min-height-300 border-radius-xl mt-4"
-           style="background-image: url('https://images.unsplash.com/photo-1533084417605-e538a510d50a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
-        <span class="mask bg-gradient-dark opacity-6"></span>
-    </div>
-    <div class="card my-4">
-      <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-        <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
-          <h6 class="text-white text-capitalize ps-3">{{ page_title|title }} Table</h6>
-        </div>
-        <div class="card-body px-0 pb-2">
-          <div class="table-responsive p-0">
-        <!-- insert table here -->
-        {% render_table table %}
+    <div class="col-12">
+      <div class="card my-4">
+        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
+          <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
+            <h6 class="text-white text-capitalize ps-3">{{ page_title|title }} Table</h6>
+          </div>
+          <div class="card-body px-0 pb-2">
+          <!-- insert table here -->
+          {% render_table table %}
           </div>
         </div>
       </div>
     </div>
-
-    </div>
-
 
     {% include 'includes/django-material-dashboard/footer.html' %}
 
