--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -495,6 +495,6 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-{% includes 'includes/django-material-dashboard/index-charts.html' %}
+{% include 'includes/django-material-dashboard/index-charts.html' %}
 
 {% endblock javascripts %}
