fixed includes -> include in template

--- a/frontend/templates/includes/django-material-dashboard/index-charts.html
+++ b/frontend/templates/includes/django-material-dashboard/index-charts.html
@@ -1,3 +1,4 @@
+{% load static %}
 <script src="{% static 'assets/js/plugins/chartjs.min.js' %}"></script>
 <script>
     var survey_count = JSON.parse(document.getElementById('survey_count').textContent);
