updated frontend templates

--- a/frontend/templates/includes/django-material-dashboard/index-charts.html
+++ b/frontend/templates/includes/django-material-dashboard/index-charts.html
@@ -3,7 +3,7 @@
 <script>
     var survey_count = JSON.parse(document.getElementById('survey_count').textContent);
     // the information in this tag is no longer being used, so remove the content from the page
-    document.getElementById('survey_count').remove()
+    //document.getElementById('survey_count').remove()
 
     console.log(survey_count)
 
